Closed
Bug 38188
Opened 25 years ago
Closed 25 years ago
Reducing text size beyond 9 reductions causes browser to crash.
Categories
(Core :: Web Painting, defect, P3)
Tracking
()
VERIFIED
FIXED
M17
People
(Reporter: mrg4, Assigned: kmcclusk)
Details
(Keywords: crash)
Under the View menu selecting reduce text size 9 times and then performing
another action such as clicking on a hyperlink causes the browser to crash.
This problem does not happen when increasing text size.
Comment 1•25 years ago
|
||
repro on 2000050408 with win98, though I get the crash immediately after the
9th time going to Reduce Text Size - I don't have to click on a link as you
said. are you sure this is Views though?
apparently a divide error, GPF is as follows:
MOZILLA caused a divide error in module GKHTML.DLL at 0167:01a7ceda.
Registers:
EAX=40000000 CS=0167 EIP=01a7ceda EFLGS=00010206
EBX=00000000 SS=016f ESP=0068c97c EBP=0068cbfc
ECX=00000014 DS=016f ESI=0068ceb0 FS=4507
EDX=00000000 ES=016f EDI=0068ce4c GS=0000
Bytes at CS:EIP:
f7 7f 30 89 9d 90 fd ff ff 89 1e 89 45 d4 99 f7
Stack dump:
0068cfb4 0219f6e0 00000000 00000000 0000000a 00000000 00000c32 d9b0d9a6
0c32643a a9ce0226 067f4f4d 01440000 067f0002 1022d9c0 005a0000 00000000
Talkbalk server seems to be down, I'll have the ID up here as soon as I can
send in the incident.
(raising severity per crashes, adding crash kw...)
I am using M15 which doesn't crash immediatly after the 9th reduction until I
perform some other action however I have noticed that the nightly build version
does crash immediatly afte 9th reduction. I may have mislabled the Compenent I
am reffering to the reduction selection under View on menu bar. File Edit View
^
| Assignee | ||
Comment 3•25 years ago
|
||
Doesn't crash on WINNT with 5/2/2000 build after reducing the font size 9 times
then clicking on hyperlinks. Also does not crash if I continue to reduce the
font size.
Status: NEW → ASSIGNED
| Assignee | ||
Updated•25 years ago
|
Target Milestone: --- → M17
Could this be an NT/9x difference? Such things have happened before. (This
really makes it a bit of a problem that most of the developers are on NT...)
Comment 6•25 years ago
|
||
I was able to reproduce this crash on Windows 98 using build 2000-04-28-08
Windows Talkback.
| Assignee | ||
Comment 7•25 years ago
|
||
Fixed in 5/10/2000 3:05PM build.
Force average character height to be at least 1 twip instead of allowing it to
round off to 0 for extremely small fonts on WIN32.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 9•24 years ago
|
||
*** Bug 111134 has been marked as a duplicate of this bug. ***
Updated•7 years ago
|
Component: Layout: View Rendering → Layout: Web Painting
You need to log in
before you can comment on or make changes to this bug.
Description
•