Force average character height to be at least 1 twip instead of allowing it to round off to 0 for extremely small fonts on WIN32. b=38188 r=rods@netscape.com